--- a/action.yml
+++ b/action.yml
@@ -4,27 +4,25 @@ description: 'See how things are passed'
 inputs:
   image:  
     description: 'The link to the docker image to use.'
+    required: false
     default: 'r-base/latest'
   action:
     description: 'What action to run? ["test", post-merge", "unit-test-on-changed", "all-unit-tests", "check"]'
+    required: false
     default: 'test'
   saysomthing:
     deccription: 'Customed information for testing'
+    required: false
     default: 'Test test'
 runs:
-  using: "composite"
+  using: "docker"
+  image: "${{ inputs.image }}"
   steps:
     - name: Test test
-      runs-on: ubuntu-latest
-      image: ${{inputs.image}}
       run: |
         echo "${secrets.GITHUB_TOKEN}""
-      shell: bash
 
     - name: Check spelling
-      runs-on: ubuntu-latest
-      if: ${{ inputs.action == 'test' }}
       run: |
         echo "run test"
         echo "${inputs.saysomthing}"
-      shell: bash
