--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,7 @@ runs:
   using: "composite"
   steps:
     - name: Test test
+      image: 'ubuntu:latest'
       run: |
         echo "${secrets.GITHUB_TOKEN}"
         echo "${inputs.container}"
