--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,12 @@ jobs:
       steps:
         - run: echo "Running test in DSPWorkflow container"
         
+        - uses: actions/checkout@v3
+          with:
+             token: ${{ inputs.githubtoken }}
+             ref: ${{ inputs.githubbranch }}
+             fetch-depth: 0
+        
         id: extract_branch
         - name: Test test
           run: |
