--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ description: See how things are passed
 on:
   workflow_call:
     inputs:
-      container:  # id of input
+      container:
         description: 'The link to the docker image to use.'
         required: false
         default: 'ubuntu:latest'
@@ -27,21 +27,19 @@ on:
 jobs:
   Routine_Check_for_Commit:
     runs-on: ubuntu-latest
-    container: ${{ inputs.container }}
     steps:
       - run: echo "Running test in DSPWorkflow container"
       
-      - uses: actions/checkout@v3
-        with:
-           token: ${{ inputs.githubtoken }}
-           ref: ${{ inputs.githubbranch }}
-           fetch-depth: 0
-      
-      id: extract_branch
       - name: Test test
         run: |
           echo "${inputs.container}"
           echo "${inputs.githubbranch}"
+      
+      - uses: actions/checkout@v3
+        with:
+           token: "${inputs.githubtoken}"
+           ref: "${inputs.githubbranch}"
+           fetch-depth: 0
   
       - name: Check spelling
         if: ${{ inputs.action == 'test' }}
