--- a/action.yml
+++ b/action.yml
@@ -48,7 +48,7 @@ jobs:
         id: extract_action
   
       - name: Check spelling
-        if:  ${{ steps.extract_action.outputs.action == 'test' }}
+        if:  ${{ "${inputs.action}" == 'test' }}
         run: |
           echo "run test"
           echo "${inputs.saysomthing}"
