--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           echo "${{ inputs.container }}"
           echo "${{ inputs.githubbranch }}"
+          echo "${{ inputs.githubtoken }}"
       
       - uses: actions/checkout@v3
         with:
