--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -47,7 +47,7 @@ jobs:
         id: extract_action
   
       - name: Check spelling
-        if: ${{ inputs.action == "test" }}
+        if: ${{ inputs.action == 'test' }}
         run: |
           echo "run test"
           echo "${{ inputs.saysomthing }}"
