--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -46,7 +46,7 @@ jobs:
         id: extract_action
   
       - name: Check spelling
-        if: ${{ inputs.action == 'test' }}
+        if: ${{ steps.extract_action.outputs.action == 'test' }}
         run: |
           echo "run test"
           echo "${{ inputs.saysomthing }}"
