--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -38,6 +38,8 @@ jobs:
           echo "${{ inputs.container }}"
           echo "${{ inputs.githubbranch }}"
           echo "${GITHUB_REPOSITORY}"
+          ls -l
+          cat test.log
       
       - uses: actions/checkout@v3
         with:
