--- a/action.yml
+++ b/action.yml
@@ -45,7 +45,8 @@ jobs:
           echo "${{ inputs.githubbranch }}"
           echo "${GITHUB_REPOSITORY}"
           pwd
-          curl -o $PWD/test.log https://raw.githubusercontent.com/ruiheesi/check-action-info/main/test.log
+          git clone https://github.com/ruiheesi/check-action-info.git
+          cp ./check-action-info/test.log .
           cat test.log
   
       - name: Check spelling
